@@ -136,7 +136,6 @@ list2SnpSet <- function(x, returnParams=FALSE){
 }
 
 loader <- function(theFile, envir, pkgname){
-	##stopifnot(theFile %in% c("genotypeStuff.rda", "mixtureStuff.rda", "preprocStuff.rda"))
 	theFile <- file.path(system.file(package=pkgname),
 			     "extdata", theFile)
 	if (!file.exists(theFile))
